test/errors/assert/else.yasl

if false {



    echo 0
    assert false
    echo 1
} else {
    assert undef
}
